# C_game

./: .gitignore  CMakeLists.txt  README.md
headers/: common_defines.h  entity.h  gamestate.h  globals.h  helpers.h  list.h  main.h  read_write_lock.h  tasks.h  window.h  windowCPUBuffer.h
headers/data_structures/: list.h  list_iterator.h  read_write_lock.h
headers/entity/: asteroid.h  bullet.h  fighter.h
headers/graphics/: D3DX12_globals.h  GPUHandler.h  GPU_handler.h
source/: entity.c  entity.h  gamestate.c  gamestate.h  globals.c  globals.h  helpers.c  list.c  main.c  main.h  memory_manager.c  memory_manager.h  read_write_lock.c  tasks.c  tasks.h  window.c  window.h  windowCPUBuffer.c
source/assets/: resources.c  resources.h
source/data_structures/: list.c  list.h  list_iterator.c  list_iterator.h  list_iterator_thread.c  list_iterator_thread.h  memory_pool.c  memory_pool.h  read_write_lock.c  read_write_lock.h  read_write_lock_priority.c  read_write_lock_priority.h  signal.c  signal.h  stack.c  stack.h
source/entity/: asteroid.c  asteroid.h  bullet.c  bullet.h  fighter.c  fighter.h
source/graphics/: D3DX12_globals.h  GPUHandler.c  GPU_handler.c  GPU_handler.h
source/graphics/shaders/: shaders.hlsl
